CloudProjectBackend/K8S/auth.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-app
  template:
    metadata:
      labels:
        app: auth-app
    spec:
      containers:
        - name: auth-app
          image: louaykharouf/authcloudprojectimage
          imagePullPolicy: Always
          ports:
            - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: auth-app
spec:
  selector:
    app: auth-app
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
  type: ClusterIP  # Use ClusterIP for internal access
