CloudProjectBackend/K8S/crud.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crud-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crud-app
  template:
    metadata:
      labels:
        app: crud-app
    spec:
      containers:
        - name: crud-app
          image: louaykharouf/crudcloudprojectimage
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: crud-app
spec:
  selector:
    app: crud-app
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP  # Use ClusterIP for internal access
